<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/name_guest_details_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/guest_details_name_text_view"
        android:textSize="20sp"
        android:fontFamily="@string/app_font_family"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        />

    <EditText
        android:id="@+id/name_guest_details_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/name_guest_details_text_view"
        app:layout_constraintStart_toEndOf="@id/name_guest_details_text_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:id="@+id/gender_guest_details_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_guest_details_text_view"
        app:layout_constraintStart_toStartOf="@id/name_guest_details_text_view"
        android:text="@string/guest_details_gender_text_view"
        android:textSize="20sp"
        android:fontFamily="@string/app_font_family"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        />

    <RadioGroup
        android:id="@+id/gender_guest_details_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/gender_guest_details_text_view"
        app:layout_constraintStart_toEndOf="@id/name_guest_details_text_view"
        android:orientation="horizontal"
        >

           <RadioButton
                android:id="@+id/male_guest_details_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@string/app_font_family"
                android:text="@string/guest_details_male_radio_button"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/female_guest_details_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@string/app_font_family"
                android:text="@string/guest_details_female_radio_button"
                android:layout_marginLeft="15dp"
                />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>